# use-cuda

./: CMakeLists.txt  README.md
include/: benchmark.h  ultic.h
src/: 02_add.cu  cuda_thread.cu
src/add/: 01_add.cu  02_add.cu
src/attention/: atten_githhub.cu  attention.cu  test.py
src/elemsize/: 01_silu.cu
src/gemm/: 01_gemm_naive.cu  02_gemm_sharemem.cu  02_my_gemm_share.cu  03_gemm.cu  gemm.cu  gemm_test.cu
src/gemv/: gemv.cu
src/layrenorm/: layernorm.cu  test.py  test_float.cpp
src/reduce/: 01_reduce.cu  03_reduce.cu
src/warp_affine/: warp.cu
